<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/imagemagenda"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
>

    <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/padraoTitulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.06"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:id="@+id/cadastrarContatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cadastrar"
            style="@style/padraobutton"
            android:textSize="15sp"
            android:onClick="startSecondActivity"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    />

    <EditText
            android:id="@+id/pesquisar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pesquisar"
            android:ems="10"
            style="@style/padraoCaixaTxt"
            android:inputType="text"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/imageButton"
            app:layout_constraintTop_toBottomOf="@id/title"
    />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_search"
            android:id="@+id/imageButton"
            android:background="@color/strongPink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pesquisar"
            app:layout_constraintTop_toTopOf="@+id/pesquisar"/>

    <TextView
            android:id="@+id/contatostxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/padraolista"
            android:text=" "
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pesquisar"

    />

    <Button
            android:id="@+id/mostrarcontatosB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttom_mostrartodos"
            style="@style/padraobutton"
            android:textSize="15sp"
            app:layout_constraintVertical_bias="0.95"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>
